--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="hagelradar.be"
-    />
-    <title>hagelradar.be</title>
+    <title>hagelradar.be - Kans op hagel voor de Benelux</title>
     <meta name="theme-color" content="#000000"/>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="description" content="hagelradar.be visualiseert de actuele kans op hagel voor de Benelux op basis van gegevens van de neerslagradar van het KNMI." />
-    <meta name="og:title" property="og:title" content="hagelradar.be">
+    <meta name="og:title" property="og:title" content="hagelradar.be - Kans op hagel voor de Benelux">
+    <meta name="og:description" property="og:description" content="hagelradar.be visualiseert de actuele kans op hagel voor de Benelux op basis van gegevens van de neerslagradar van het KNMI.">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo512.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="canonical" href="https://hagelradar.be" />
